--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
 SESSION_SECRET={JqhB\ah~DE3hBpv
+CLOUND_NAME=dqrwzkm1f
+CLOUDINARY_API_KEY=297593493293556
+CLOUDINARY_API_SECRET=-30FlW_bFye10T52-5TvrHnCRAI
