--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,18 @@
     "seed": "node db/seed.js"
   },
   "dependencies": {
+    "cloudinary": "^1.28.1",
     "connect-session-sequelize": "^7.0.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "form-data": "^4.0.0",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
